--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,46 @@
-
-h1 {
-   font-weight: 900;
-   font-size: 3.5rem;
-   line-height: 1.5;
+body {
+   font-family: 'Montserrat', sans-serif;
+   text-align: center;
 }
 
-h2 {
+h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
-   font-size: 3rem;
-   line-height: 1.5;
-}
-
-h3 {
-   font-weight: bold;
-   font-size: 1.5rem;
 }
 
 p {
    color: #8f8f8f;
 }
 
-body {
-   font-family: 'Montserrat', sans-serif;
+
+/* Headings */
+.big-heading {
+   font-weight: 900;
+   font-size: 3.5rem;
+   line-height: 1.5;
 }
 
+.section-heading {
+   font-size: 3rem;
+   line-height: 1.5;
+}
+
+
+/* Containers */
 .container-fluid {
-   padding: 3% 15% 7%;
+   padding: 7% 15%;
 }
 
-#title {
+
+/* Sections */
+.colored-section {
    background-color: #FF4C68;
    color: white;
 }
+
+.white-section {
+   background-color: white;
+}
+
 
 /* Navigation Bar */
 .navbar {
@@ -53,12 +62,13 @@ body {
    font-size: 1.2rem;
 }
 
-/* Download Buttons */
-.download-button {
-   margin: 5% 3% 5% 0;
+
+/* Title Section */
+#title .container-fluid {
+   padding: 3% 15% 7%;
+   text-align: left;
 }
 
-/* Title Image */
 .title-img {
    width: 60%;
    transform: rotate(25deg);
@@ -66,26 +76,21 @@ body {
    right: 30%;
 }
 
-@media (max-width: 1028px) {
-   .title-img {
-      position: static;
-      transform: rotate(0);
-   }
-
-   #title {
-      text-align: center;
-   }
+.download-button {
+   margin: 5% 3% 5% 0;
 }
+
 
 /* Features Section */
 #features {
-   padding: 7% 15%;
-   background-color: white;
    position: relative;
 }
 
-.feature {
-   text-align: center;
+.feature-title {
+   font-size: 1.5rem;
+}
+
+.feature-box {
    padding: 5%;
 }
 
@@ -98,65 +103,62 @@ body {
    color: #FF4C68;
 }
 
+
 /* Testimonials Section */
 #testimonials {
-   text-align: center;
    background-color: #EF8172;
-   color: white;
 }
 
-.testimonial-img {
+.testimonial-text {
+   font-size: 3rem;
+   line-height: 1.5;
+}
+
+.testimonial-image {
    width: 10%;
    border-radius: 50%;
    margin: 20px;
 }
 
-.carousel-item {
-   padding: 7% 15%;
-}
-
 #press {
    background-color: #EF8172;
-   text-align: center;
    padding-bottom: 3%;
 }
 
 .press-logo {
-    width: 15%;
-    margin: 20px 20px 50px;
+   width: 15%;
+   margin: 20px 20px 50px;
 }
+
 
 /* Pricing Section */
 #pricing {
    padding: 100px;
-   text-align: center;
+}
+
+.price-text {
+   font-size: 3rem;
+   line-height: 1.5;
 }
 
 .pricing-column {
    padding: 3% 2%;
 }
 
-/* Call To Action */
-#cta {
-   background-color: #FF4C68;
-   text-align: center;
-   padding: 7% 15%;
-}
-
-.cta-text {
-   font-weight: 900;
-   color: white;
-   font-size: 3.5rem;
-   line-height: 1.5;
-}
 
 /* Footer Section */
-#footer {
-   text-align: center;
-   padding: 7% 15%;
-   background-color: white;
-}
-
 .footer-icon {
    margin: 20px 10px;
+}
+
+
+@media (max-width: 1028px) {
+   .title-img {
+      position: static;
+      transform: rotate(0);
+   }
+
+   #title {
+      text-align: center;
+   }
 }
