--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ p {
 
 
 @media (max-width: 1028px) {
-   .title-img {
+   .title-image {
       position: static;
       transform: rotate(0);
    }
