--- a/css/styles.css
+++ b/css/styles.css
@@ -169,8 +169,24 @@ p {
    }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
    .big-heading {
-      font-size: 3.2rem;
+      font-size: 3rem;
+   }
+
+   .section-heading {
+      font-size: 2.5rem;
+   }
+
+   .testimonial-text {
+      font-size: 2.5rem;
+   }
+
+   .price-text {
+      font-size: 2.5rem;
+   }
+
+   .pricing-plan {
+      font-size: 1.65rem;
    }
 }
